--- a/CommonLibProject/CommonUtils/src/main/res/values/attrs.xml
+++ b/CommonLibProject/CommonUtils/src/main/res/values/attrs.xml
@@ -19,15 +19,20 @@
     <declare-styleable name="LimitEditText">
         <attr name="isLimitInputCount" format="boolean"/>
         <attr name="limitCount" format="integer"/>
-        <attr name="isShowClearInputButton" format="boolean"/>
-        <attr name="isShowExtraButton" format="boolean"/>
-        <attr name="clearInputButtonDrawable" format="reference"/>
-        <attr name="extraButtonDrawable" format="reference"/>
         <attr name="isShowTotalInputCount" format="boolean"/>
         <attr name="isToastIfOverRangingLimitCount" format="boolean"/>
         <attr name="toastText" format="string"/>
         <attr name="totalInputCountTextColor" format="color"/>
         <attr name="totalInputCountTextSize" format="dimension"/>
+    </declare-styleable>
+
+    <declare-styleable name="PasswordEditText">
+        <attr name="isShowClearButton" format="boolean"/>
+        <attr name="isShowDisplayPwdButton" format="boolean"/>
+        <attr name="isShowLeftIcon" format="boolean"/>
+        <attr name="clearButtonDrawable" format="reference"/>
+        <attr name="displayPwdButtonDrawable" format="reference"/>
+        <attr name="leftIcon" format="reference"/>
     </declare-styleable>
 
 </resources>
