提交新的PasswordEditText, 老的改名为LoginEditText, 提交ExtraButtonEditText

--- a/CommonLibProject/CommonUtils/src/main/res/values/attrs.xml
+++ b/CommonLibProject/CommonUtils/src/main/res/values/attrs.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <declare-styleable name="LoadingPager" >
         <attr name="loadingDrawable" format="reference"/>
         <attr name="loadingText" format="string"/>
@@ -23,10 +24,23 @@
         <attr name="isToastIfOverRangingLimitCount" format="boolean"/>
         <attr name="toastText" format="string"/>
         <attr name="totalInputCountTextColor" format="color"/>
-        <attr name="totalInputCountTextSize" format="dimension"/>
+    </declare-styleable>
+
+    <declare-styleable name="ExtraButtonEditText">
+        <attr name="isShowLeftButton" format="boolean"/>
+        <attr name="isShowRightButton" format="boolean"/>
+        <attr name="leftButtonDrawableRes" format="reference"/>
+        <attr name="rightButtonDrawableRes" format="reference"/>
+        <attr name="isAutoClearTextWhenClickRightButton" format="boolean"/>
+        <attr name="isAutoClearTextWhenClickLeftButton" format="boolean"/>
     </declare-styleable>
 
     <declare-styleable name="PasswordEditText">
+        <attr name="passwordVisibilityDrawable" format="reference"/>
+        <attr name="passwordVisibilityChecked" format="boolean"/>
+    </declare-styleable>
+
+    <declare-styleable name="LoginEditText">
         <attr name="isShowClearButton" format="boolean"/>
         <attr name="isShowDisplayPwdButton" format="boolean"/>
         <attr name="isShowLeftIcon" format="boolean"/>
