--- a/CommonLibProject/CommonUtils/src/main/res/values/attrs.xml
+++ b/CommonLibProject/CommonUtils/src/main/res/values/attrs.xml
@@ -49,4 +49,22 @@
         <attr name="leftIcon" format="reference"/>
     </declare-styleable>
 
+    <declare-styleable name="CircleImageView">
+        <attr name="civ_border_width" format="dimension" />
+        <attr name="civ_border_color" format="color" />
+        <attr name="civ_border_overlay" format="boolean" />
+        <attr name="civ_fill_color" format="color" />
+    </declare-styleable>
+
+    <declare-styleable name="TimeFlagTextView">
+        <attr name="flagName" format="string"/>
+        <attr name="flagDrawable" format="reference"/>
+        <attr name="flagLocation" format="enum">
+            <enum name="left_top_corner" value="0"/>
+            <enum name="left_bottom_corner" value="1"/>
+            <enum name="right_top" value="2"/>
+            <enum name="right_bottom" value="3"/>
+        </attr>
+    </declare-styleable>
+
 </resources>
