--- a/CommonLibProject/CommonUtilsDemo/src/main/res/layout/activity_main.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/res/layout/activity_main.xml
@@ -1,118 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.github.evan.common_utils_demo.MainActivity">
+    android:layout_height="match_parent">
 
-    <LinearLayout
+    <android.support.design.widget.CoordinatorLayout
+        android:id="@+id/coordinatorLayout"
         android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <android.support.design.widget.AppBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolBar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:popupTheme="@style/ActionBarPopupMenuNotOverActionBar"
+                app:theme="@style/ThemeDarkActionBar"
+                app:title="@string/app_name" />
+
+
+        </android.support.design.widget.AppBarLayout>
+
+
+        <FrameLayout
+            android:id="@+id/fragmentContainer"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
+
+    </android.support.design.widget.CoordinatorLayout>
+
+    <android.support.design.widget.NavigationView
+        android:id="@+id/navigationView"
+        android:layout_width="300dp"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_gravity="left"
+        app:headerLayout="@layout/view_navigation_view_header"
+        app:menu="@menu/view_main_navigation">
 
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Android EditText"
-            android:textColor="@color/Coral"
-            android:textSize="18sp" />
-
-        <android.support.v7.widget.AppCompatEditText
-            android:id="@+id/androidEditText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:lines="5" />
+    </android.support.design.widget.NavigationView>
 
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="LimitEditText"
-            android:textColor="@color/Coral"
-            android:textSize="18sp" />
-
-        <com.github.evan.common_utils.ui.view.LimitEditText
-            android:id="@+id/limitEditText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="top|left"
-            android:lines="5"
-            app:isLimitInputCount="true"
-            app:isShowTotalInputCount="true"
-            app:isToastIfOverRangingLimitCount="true"
-            app:limitCount="48"
-            app:totalInputCountTextColor="@color/DarkGray" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="ExtraButtonEditText"
-            android:textColor="@color/Coral"
-            android:textSize="18sp" />
-
-        <com.github.evan.common_utils.ui.view.ExtraButtonEditText
-            android:id="@+id/extraButtonEditText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="top|left"
-            android:lines="5"
-            app:isAutoClearTextWhenClickLeftButton="false"
-            app:isAutoClearTextWhenClickRightButton="false"
-            app:isShowLeftButton="true"
-            app:isShowRightButton="true"
-            app:leftButtonDrawableRes="@drawable/selector_password_visibility"
-            app:rightButtonDrawableRes="@drawable/selector_button_clear" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="PasswordEditText"
-            android:textColor="@color/Coral"
-            android:textSize="18sp" />
-
-        <com.github.evan.common_utils.ui.view.PasswordEditText
-            android:id="@+id/passwordEditText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="top|left"
-            android:inputType="text"
-            android:lines="5" />
-
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="LoginEditText"
-            android:textColor="@color/Coral"
-            android:textSize="18sp" />
-
-        <com.github.evan.common_utils.ui.view.LoginEditText
-            android:id="@+id/accountPwdEditText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:isShowClearButton="true"
-            app:isShowDisplayPwdButton="true"
-            app:isShowLeftIcon="true"
-            app:leftIcon="@mipmap/ic_account_dark" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="LoginEditText"
-            android:textColor="@color/Coral"
-            android:textSize="18sp" />
-
-        <com.github.evan.common_utils.ui.view.LoginEditText
-            android:id="@+id/pwdEditText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:isShowClearButton="true"
-            app:isShowDisplayPwdButton="false"
-            app:isShowLeftIcon="true"
-            app:leftIcon="@mipmap/ic_lock_dark" />
-
-    </LinearLayout>
-
-</ScrollView>
+</android.support.v4.widget.DrawerLayout>
