--- a/CommonLibProject/CommonUtilsDemo/src/main/res/layout/item_image_pager.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/res/layout/item_image_pager.xml
@@ -1,23 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent"
+    app:cardCornerRadius="5dp"
+    app:cardElevation="5dp"
+    app:cardPreventCornerOverlap="false"
+    app:cardUseCompatPadding="true">
 
-    <ImageView
-        android:id="@+id/img_image_pager_holder"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scaleType="centerCrop" />
+        android:layout_height="match_parent"
+        android:background="@drawable/shape_white_bkg_with_round_corner">
 
-    <TextView
-        android:id="@+id/txt_position_image_pager_holder"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|right"
-        android:layout_margin="10dp"
-        android:text="@string/about"
-        android:textColor="@color/text_color_black"
-        android:textSize="18sp" />
+        <com.github.evan.common_utils.ui.view.imageView.RoundedImageView
+            android:id="@+id/img_image_pager_holder"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            app:riv_corner_radius="5dp" />
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/txt_position_image_pager_holder"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|right"
+            android:layout_margin="10dp"
+            android:text="@string/about"
+            android:textColor="@color/Orange"
+            android:textSize="18sp" />
+
+    </FrameLayout>
+
+
+</android.support.v7.widget.CardView>
