更新ListGridViewFragment & RecyclerViewFragment 界面，RadioGroup 替换为 TabLayout

--- a/CommonLibProject/CommonUtils/src/main/res/values/style.xml
+++ b/CommonLibProject/CommonUtils/src/main/res/values/style.xml
@@ -58,4 +58,14 @@
         <item name="android:textColor">@color/Gray</item>
     </style>
 
+    <style name="TabLayoutTextAppearance_White">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">@drawable/selector_text_color_light</item>
+    </style>
+
+    <style name="TabLayoutTextAppearance_Black">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">@drawable/selector_text_color_dark</item>
+    </style>
+
 </resources>
