--- a/CommonLibProject/CommonUtils/src/main/res/drawable/selector_text_color_dark.xml
+++ b/CommonLibProject/CommonUtils/src/main/res/drawable/selector_text_color_dark.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="@color/DarkGray" android:state_pressed="true"/>
-    <item android:color="@color/OrangeRed" android:state_checked="true"/>
-    <item android:color="@color/OrangeRed" android:state_selected="true"/>
-    <item android:color="@color/OrangeRed" android:state_activated="true"/>
-    <item android:color="@color/DimGray"/>
+    <item android:color="?attr/colorAccent" android:state_checked="true"/>
+    <item android:color="?attr/colorAccent" android:state_selected="true"/>
+    <item android:color="?attr/colorAccent" android:state_activated="true"/>
+    <item android:color="@color/Gray" android:state_pressed="true"/>
+    <item android:color="@color/text_color_black"/>
 </selector>
