--- a/CommonLibProject/CommonUtilsDemo/src/main/res/layout/fragment_recycler_view.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/res/layout/fragment_recycler_view.xml
@@ -1,54 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <RadioGroup
-        android:id="@+id/radio_group"
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tab_layout_recycler_view_fragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:background="@color/colorPrimary"
+        app:tabTextAppearance="@style/TabLayoutTextAppearance_White"
+        app:tabGravity="fill"
+        app:tabMode="fixed">
 
-        <RadioButton
+        <android.support.design.widget.TabItem
             android:id="@+id/radio_btn_list_mode"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/vertical_recycler_item"
-            android:textSize="14sp" />
+            android:text="@string/vertical_recycler_item" />
 
-        <RadioButton
+        <android.support.design.widget.TabItem
             android:id="@+id/radio_btn_horizontal_list_mode"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/horizontal_recycler_item"
-            android:textSize="14sp" />
+            android:text="@string/horizontal_recycler_item" />
 
-        <RadioButton
+        <android.support.design.widget.TabItem
             android:id="@+id/radio_btn_grid_mode"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/grid_recycler_item"
-            android:textSize="14sp" />
+            android:text="@string/grid_recycler_item" />
 
-        <RadioButton
+
+        <android.support.design.widget.TabItem
             android:id="@+id/radio_btn_waterfall"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/waterfall_recycler_item"
-            android:textSize="14sp" />
+            android:text="@string/waterfall_recycler_item" />
 
-    </RadioGroup>
+
+    </android.support.design.widget.TabLayout>
+
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp" />
 
 </LinearLayout>
