--- a/CommonLibProject/CommonUtils/src/main/res/values/attrs.xml
+++ b/CommonLibProject/CommonUtils/src/main/res/values/attrs.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <declare-styleable name="intercept_mode">
+        <attr name="interceptMode" format="enum">
+            <enum name="use_view_default" value="0"/>
+            <enum name="all_by_itself" value="1"/>
+            <enum name="horizontal_by_itself" value="2"/>
+            <enum name="vertical_by_itself" value="3"/>
+        </attr>
+    </declare-styleable>
+
     <declare-styleable name="LoadingPager" >
         <attr name="loadingDrawable" format="reference"/>
         <attr name="loadingText" format="string"/>
