--- a/CommonLibProject/CommonUtilsDemo/src/main/res/layout/pager_multi_nesting.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/res/layout/pager_multi_nesting.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <com.github.evan.common_utils.ui.view.nestingTouchView.NestingViewPager
         android:id="@+id/nesting_view_pager_multi_nesting_holder"
+        app:view_pager_intercept_mode="all_by_itself"
         android:layout_width="match_parent"
         android:layout_height="200dp"/>
 
