--- a/CommonLibProject/CommonUtilsDemo/src/main/res/layout/fragment_debug.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/res/layout/fragment_debug.xml
@@ -2,7 +2,8 @@
 <com.github.evan.common_utils.ui.view.nestingTouchView.NestingHorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    app:horizontal_scroll_view_intercept_mode="horizontal_by_itself">
 
     <LinearLayout
         android:layout_width="wrap_content"
