--- a/CommonLibProject/CommonUtilsDemo/src/main/res/layout/fragment_view_pager.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/res/layout/fragment_view_pager.xml
@@ -1,12 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/view_pager"
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tab_layout_view_pager_fragment"
         android:layout_width="match_parent"
-        android:layout_height="200dp" />
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        app:tabGravity="fill"
+        app:tabMode="scrollable"
+        app:tabTextAppearance="@style/TabItemTextAppearance_White" />
+
+    <com.github.evan.common_utils.ui.view.nestingTouchView.NestingViewPager
+        android:id="@+id/nesting_view_pager_view_pager_fragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:nesting_view_pager_touch_intercept_mode="horizontal" />
 
 </LinearLayout>
