--- a/CommonLibProject/CommonUtils/src/main/res/values/attrs.xml
+++ b/CommonLibProject/CommonUtils/src/main/res/values/attrs.xml
@@ -1,6 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <declare-styleable name="NestingRecyclerView">
+        <attr name="nesting_recycler_view_touch_intercept_mode" format="enum">
+            <enum name="use_supper_default" value="-1"/>
+            <enum name="all_by_myself" value="0"/>
+            <enum name="all_by_myself_but_threshold" value="1"/>
+            <enum name="horizontal" value="2"/>
+            <enum name="horizontal_but_threshold" value="3"/>
+            <enum name="vertical" value="4"/>
+            <enum name="vertical__but_threshold" value="5"/>
+        </attr>
+    </declare-styleable>
+
     <declare-styleable name="NestingViewPager">
         <attr name="nesting_view_pager_touch_intercept_mode" format="enum">
             <enum name="use_supper_default" value="-1"/>
