--- a/CommonLibProject/CommonUtilsDemo/src/main/res/layout/item_image_pager.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/res/layout/item_image_pager.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/layout_root_image_pager_holder"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:cardCornerRadius="5dp"
@@ -17,6 +18,7 @@
             android:id="@+id/img_image_pager_holder"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:clickable="true"
             android:scaleType="centerCrop"
             app:riv_corner_radius="5dp" />
 
