--- a/CommonLibProject/CommonUtilsDemo/src/main/res/layout/activity_test.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/res/layout/activity_test.xml
@@ -1,24 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.github.evan.common_utils.ui.view.ptr.PtrFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/ptr_frame_layout"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <android.support.design.widget.TabLayout
-        android:id="@+id/tab_layout_test_activity"
+    <com.github.evan.common_utils.ui.view.ptr.indicator.PtrClassicIndicator
+        android:id="@+id/ptr_indicator"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        app:tabGravity="fill"
-        app:tabMode="scrollable"
-        app:tabTextAppearance="@style/TabItemTextAppearance_White" />
+        android:layout_height="wrap_content" />
 
-    <com.github.evan.common_utils.ui.view.nestingTouchView.NestingViewPager
-        android:id="@+id/nesting_view_pager_test_activity"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:nesting_view_pager_touch_intercept_mode="horizontal" />
+        android:layout_height="match_parent">
+
+        <TextView
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="test"
+            android:textColor="@color/text_color_black"
+            android:textSize="16sp" />
 
 
-</LinearLayout>
+    </RelativeLayout>
+
+
+</com.github.evan.common_utils.ui.view.ptr.PtrFrameLayout>
