--- a/CommonLibProject/CommonUtilsDemo/src/main/res/layout/activity_test.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/res/layout/activity_test.xml
@@ -1,29 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.github.evan.common_utils.ui.view.ptr.PtrFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/ptr_frame_layout"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/ptr_frame_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/Gray">
 
     <com.github.evan.common_utils.ui.view.ptr.indicator.PtrClassicIndicator
         android:id="@+id/ptr_indicator"
+        app:is_progress_rotation_when_drag="true"
+        app:progress_rotation_direction="anti_clockwise"
+        app:progress_drawable="@mipmap/icon_loading_small"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/Grey_Material_Design_400_saturation"
+        android:gravity="center">
 
         <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:gravity="center"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
             android:text="test"
             android:textColor="@color/text_color_black"
             android:textSize="16sp" />
 
-
-    </RelativeLayout>
+    </LinearLayout>
 
 
 </com.github.evan.common_utils.ui.view.ptr.PtrFrameLayout>
