--- a/CommonLibProject/CommonUtils/src/main/res/layout/indicator_gif_with_title.xml
+++ b/CommonLibProject/CommonUtils/src/main/res/layout/indicator_gif_with_title.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center"
     android:paddingBottom="20dp"
     android:paddingTop="20dp">
-
 
     <LinearLayout
         android:id="@+id/txt_layout"
@@ -16,19 +15,19 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/txt_title_indicator_classic"
+            android:id="@+id/txt_title_indicator_git_with_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/pulling"
+            android:text="@string/jd_make_your_shopping_faster"
             android:textColor="@color/text_color_black"
             android:textSize="14sp" />
 
         <TextView
-            android:id="@+id/txt_desc_indicator_classic"
+            android:id="@+id/txt_desc_indicator_git_with_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:text="@string/last_refresh_time"
+            android:text="@string/pulling"
             android:textColor="@color/text_color_black"
             android:textSize="12sp" />
 
@@ -36,21 +35,23 @@
 
 
     <ImageView
-        android:id="@+id/ic_progress_indicator_classic"
+        android:id="@+id/ic_drawable_indicator_git_with_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_marginRight="30dp"
         android:layout_toLeftOf="@id/txt_layout"
-        android:src="@mipmap/icon_loading_small" />
+        android:src="@mipmap/ic_express" />
 
-    <ImageView
-        android:id="@+id/ic_arrow_indicator_classic"
+    <com.github.evan.common_utils.ui.view.GifView
+        android:id="@+id/gif_indicator_git_with_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_marginRight="30dp"
         android:layout_toLeftOf="@id/txt_layout"
-        android:src="@mipmap/ic_arrow_bottom" />
+        app:gif="@mipmap/gif_jd_carrier"
+        app:paused="true" />
+
 
 </RelativeLayout>
