--- a/CommonLibProject/CommonUtils/src/main/res/values/attrs.xml
+++ b/CommonLibProject/CommonUtils/src/main/res/values/attrs.xml
@@ -1,12 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <declare-styleable name="GifView">
+        <attr name="gif" format="reference" />
+        <attr name="paused" format="boolean" />
+    </declare-styleable>
+
+    <declare-styleable name="CustomTheme">
+        <attr name="gifViewStyle" format="reference" />
+    </declare-styleable>
+
     <declare-styleable name="PtrFrameLayout">
         <attr name="slide_damping" format="float"/>
     </declare-styleable>
 
-    <declare-styleable name="PtrClassicIndicator">
+    <declare-styleable name="TimeFlagIndicator">
         <attr name="update_time_flag" format="string"/>
+    </declare-styleable>
+
+    <declare-styleable name="ClassicProIndicator">
         <attr name="progress_drawable" format="reference"/>
         <attr name="is_progress_rotation_when_drag" format="boolean"/>
         <attr name="progress_rotation_direction" format="enum">
