--- a/CommonLibProject/CommonUtils/src/main/res/values/style.xml
+++ b/CommonLibProject/CommonUtils/src/main/res/values/style.xml
@@ -68,4 +68,5 @@
         <item name="android:textColor">@drawable/selector_text_color_dark</item>
     </style>
 
+    <style name="Widget.GifView" parent="@android:style/Widget"/>
 </resources>
