--- a/CommonLibProject/CommonUtils/src/main/res/layout/indicator_classic.xml
+++ b/CommonLibProject/CommonUtils/src/main/res/layout/indicator_classic.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center"
     android:paddingBottom="20dp"
     android:paddingTop="20dp">
 
@@ -11,7 +10,7 @@
         android:id="@+id/txt_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_gravity="center"
         android:gravity="center"
         android:orientation="vertical">
 
@@ -39,18 +38,16 @@
         android:id="@+id/ic_progress_indicator_classic"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="30dp"
-        android:layout_toLeftOf="@id/txt_layout"
+        android:layout_gravity="left|center_vertical"
+        android:layout_marginLeft="50dp"
         android:src="@mipmap/icon_loading_small" />
 
     <ImageView
         android:id="@+id/ic_arrow_indicator_classic"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="30dp"
-        android:layout_toLeftOf="@id/txt_layout"
+        android:layout_gravity="left|center_vertical"
+        android:layout_marginLeft="50dp"
         android:src="@mipmap/ic_arrow_bottom" />
 
-</RelativeLayout>
+</FrameLayout>
