--- a/CommonLibProject/CommonUtils/src/main/res/layout/indicator_classic_pro.xml
+++ b/CommonLibProject/CommonUtils/src/main/res/layout/indicator_classic_pro.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
@@ -11,7 +11,7 @@
         android:id="@+id/txt_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_gravity="center"
         android:gravity="center"
         android:orientation="vertical">
 
@@ -36,13 +36,12 @@
 
 
     <ImageView
+        android:layout_marginLeft="50dp"
         android:id="@+id/ic_progress_indicator_classic_pro"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="30dp"
-        android:layout_toLeftOf="@id/txt_layout"
+        android:layout_gravity="left|center_vertical"
         android:src="@mipmap/icon_loading_small" />
 
 
-</RelativeLayout>
+</FrameLayout>
