--- a/CommonLibProject/CommonUtils/src/main/res/layout/indicator_classic.xml
+++ b/CommonLibProject/CommonUtils/src/main/res/layout/indicator_classic.xml
@@ -48,6 +48,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="left|center_vertical"
         android:layout_marginLeft="50dp"
-        android:src="@mipmap/ic_arrow_bottom" />
+        android:src="@mipmap/ic_arrow" />
 
 </FrameLayout>
