--- a/CommonLibProject/CommonUtilsDemo/src/main/res/layout/fragment_pull_to_refresh.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/res/layout/fragment_pull_to_refresh.xml
@@ -9,11 +9,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:columnCount="2"
-        app:rowCount="2">
+        app:rowCount="8">
 
         <android.support.v7.widget.CardView
-            android:layout_width="wrap_content"
+            android:id="@+id/card_ptr_with_view"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:clickable="true"
             android:foreground="?android:attr/selectableItemBackground"
             app:cardCornerRadius="5dp"
             app:cardElevation="5dp"
@@ -22,22 +24,25 @@
             app:layout_columnWeight="1"
             app:layout_rowWeight="1">
 
-            <Button
-                android:id="@+id/btn_with_text_view_pull_to_refresh_fragment"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/shape_orange_bkg_with_round_corner"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:clickable="false"
                 android:gravity="center"
-                android:padding="5dp"
-                android:text="@string/classic_indicator_with_ptl" />
-
+                android:minLines="3"
+                android:text="@string/with_view"
+                android:textColor="@color/Black"
+                android:textSize="16sp" />
 
         </android.support.v7.widget.CardView>
 
 
         <android.support.v7.widget.CardView
-            android:layout_width="wrap_content"
+            android:id="@+id/card_ptr_with_view_group"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:clickable="true"
             android:foreground="?android:attr/selectableItemBackground"
             app:cardCornerRadius="5dp"
             app:cardElevation="5dp"
@@ -46,22 +51,77 @@
             app:layout_columnWeight="1"
             app:layout_rowWeight="1">
 
-            <Button
-                android:id="@+id/btn_with_view_group_pull_to_refresh_fragment"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/shape_orange_bkg_with_round_corner"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:clickable="false"
                 android:gravity="center"
-                android:padding="5dp"
-                android:text="@string/classic_pro_indicator_with_ptl" />
+                android:minLines="3"
+                android:text="@string/with_view_group"
+                android:textColor="@color/Black"
+                android:textSize="16sp" />
 
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/card_ptr_with_list_view"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:foreground="?android:attr/selectableItemBackground"
+            app:cardCornerRadius="5dp"
+            app:cardElevation="5dp"
+            app:cardPreventCornerOverlap="true"
+            app:cardUseCompatPadding="true"
+            app:layout_columnWeight="1"
+            app:layout_rowWeight="1">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:clickable="false"
+                android:gravity="center"
+                android:minLines="3"
+                android:text="@string/with_list_view"
+                android:textColor="@color/Black"
+                android:textSize="16sp" />
+
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/card_ptr_with_grid_view"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:foreground="?android:attr/selectableItemBackground"
+            app:cardCornerRadius="5dp"
+            app:cardElevation="5dp"
+            app:cardPreventCornerOverlap="true"
+            app:cardUseCompatPadding="true"
+            app:layout_columnWeight="1"
+            app:layout_rowWeight="1">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:clickable="false"
+                android:gravity="center"
+                android:minLines="3"
+                android:text="@string/with_grid_view"
+                android:textColor="@color/Black"
+                android:textSize="16sp" />
 
         </android.support.v7.widget.CardView>
 
 
         <android.support.v7.widget.CardView
-            android:layout_width="wrap_content"
+            android:id="@+id/card_ptr_with_recycler_view"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:clickable="true"
             android:foreground="?android:attr/selectableItemBackground"
             app:cardCornerRadius="5dp"
             app:cardElevation="5dp"
@@ -70,22 +130,129 @@
             app:layout_columnWeight="1"
             app:layout_rowWeight="1">
 
-            <Button
-                android:id="@+id/btn_with_list_view_pull_to_refresh_fragment"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/shape_orange_bkg_with_round_corner"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:clickable="false"
                 android:gravity="center"
-                android:padding="5dp"
-                android:text="@string/gif_indicator_with_ptl" />
+                android:minLines="3"
+                android:text="@string/with_recycler_view"
+                android:textColor="@color/Black"
+                android:textSize="16sp" />
 
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/card_ptr_with_view_pager"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:foreground="?android:attr/selectableItemBackground"
+            app:cardCornerRadius="5dp"
+            app:cardElevation="5dp"
+            app:cardPreventCornerOverlap="true"
+            app:cardUseCompatPadding="true"
+            app:layout_columnWeight="1"
+            app:layout_rowWeight="1">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:clickable="false"
+                android:gravity="center"
+                android:minLines="3"
+                android:text="@string/with_view_pager"
+                android:textColor="@color/Black"
+                android:textSize="16sp" />
+
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/card_ptr_with_scroll_view"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:foreground="?android:attr/selectableItemBackground"
+            app:cardCornerRadius="5dp"
+            app:cardElevation="5dp"
+            app:cardPreventCornerOverlap="true"
+            app:cardUseCompatPadding="true"
+            app:layout_columnWeight="1"
+            app:layout_rowWeight="1">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:clickable="false"
+                android:gravity="center"
+                android:minLines="3"
+                android:text="@string/with_scroll_view"
+                android:textColor="@color/Black"
+                android:textSize="16sp" />
+
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/card_ptr_with_horizontal_scroll_view"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:foreground="?android:attr/selectableItemBackground"
+            app:cardCornerRadius="5dp"
+            app:cardElevation="5dp"
+            app:cardPreventCornerOverlap="true"
+            app:cardUseCompatPadding="true"
+            app:layout_columnWeight="1"
+            app:layout_rowWeight="1">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:clickable="false"
+                android:gravity="center"
+                android:minLines="3"
+                android:text="@string/with_horizontal_scroll_view"
+                android:textColor="@color/Black"
+                android:textSize="16sp" />
+
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/card_ptr_with_classic_indicator"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:foreground="?android:attr/selectableItemBackground"
+            app:cardCornerRadius="5dp"
+            app:cardElevation="5dp"
+            app:cardPreventCornerOverlap="true"
+            app:cardUseCompatPadding="true"
+            app:layout_columnWeight="1"
+            app:layout_rowWeight="1">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:clickable="false"
+                android:gravity="center"
+                android:minLines="3"
+                android:text="@string/ptr_with_classic_indicator"
+                android:textColor="@color/Black"
+                android:textSize="16sp" />
 
         </android.support.v7.widget.CardView>
 
 
         <android.support.v7.widget.CardView
-            android:layout_width="wrap_content"
+            android:id="@+id/card_ptr_with_classic_pro_indicator"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:clickable="true"
             android:foreground="?android:attr/selectableItemBackground"
             app:cardCornerRadius="5dp"
             app:cardElevation="5dp"
@@ -94,15 +261,70 @@
             app:layout_columnWeight="1"
             app:layout_rowWeight="1">
 
-            <Button
-                android:id="@+id/btn_with_grid_view_pull_to_refresh_fragment"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/shape_orange_bkg_with_round_corner"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:clickable="false"
                 android:gravity="center"
-                android:padding="5dp"
-                android:text="@string/large_image_indicator_with_ptr" />
+                android:minLines="3"
+                android:text="@string/ptr_with_classic_pro_indicator"
+                android:textColor="@color/Black"
+                android:textSize="16sp" />
 
+        </android.support.v7.widget.CardView>
+
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/card_ptr_with_gif_indicator"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:foreground="?android:attr/selectableItemBackground"
+            app:cardCornerRadius="5dp"
+            app:cardElevation="5dp"
+            app:cardPreventCornerOverlap="true"
+            app:cardUseCompatPadding="true"
+            app:layout_columnWeight="1"
+            app:layout_rowWeight="1">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:clickable="false"
+                android:gravity="center"
+                android:minLines="3"
+                android:text="@string/ptr_with_gif_indicator"
+                android:textColor="@color/Black"
+                android:textSize="16sp" />
+
+        </android.support.v7.widget.CardView>
+
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/card_ptr_with_large_image_indicator"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:foreground="?android:attr/selectableItemBackground"
+            app:cardCornerRadius="5dp"
+            app:cardElevation="5dp"
+            app:cardPreventCornerOverlap="true"
+            app:cardUseCompatPadding="true"
+            app:layout_columnWeight="1"
+            app:layout_rowWeight="1">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:clickable="false"
+                android:gravity="center"
+                android:minLines="3"
+                android:text="@string/ptr_with_large_image_indicator"
+                android:textColor="@color/Black"
+                android:textSize="16sp" />
 
         </android.support.v7.widget.CardView>
 
