--- a/CommonLibProject/CommonUtils/src/main/res/values/attrs.xml
+++ b/CommonLibProject/CommonUtils/src/main/res/values/attrs.xml
@@ -2,14 +2,24 @@
 <resources>
 
     <declare-styleable name="PtrLayout">
-        <attr name="indicator_id" format="reference"/>
-        <attr name="content_id" format="reference"/>
-        <attr name="ad_view_id" format="reference"/>
-        <attr name="slide_dumping" format="float"/>
-        <attr name="release_line_of_indicator_height_multiple" format="float"/>
-        <attr name="roll_back_to_idle_duration" format="integer"/>
-        <attr name="roll_back_to_refreshing_duration" format="integer"/>
-        <attr name="auto_refresh_duration" format="integer"/>
+        <attr name="indicator_id" format="reference" />
+        <attr name="content_id" format="reference" />
+        <attr name="ad_view_id" format="reference" />
+        <attr name="slide_dumping" format="float" />
+        <attr name="release_line_of_indicator_height_multiple" format="float" />
+        <attr name="roll_back_to_idle_duration" format="integer" />
+        <attr name="roll_back_to_refreshing_duration" format="integer" />
+        <attr name="auto_refresh_duration" format="integer" />
+    </declare-styleable>
+
+    <declare-styleable name="BaseIndicator">
+        <attr name="progress_drawable" format="reference" />
+        <attr name="progress_rotation_duration" format="integer" />
+        <attr name="is_progress_rotation_when_drag" format="boolean" />
+        <attr name="progress_rotation_direction" format="enum">
+            <enum name="clockwise" value="0" />
+            <enum name="anti_clockwise" value="1" />
+        </attr>
     </declare-styleable>
 
     <declare-styleable name="GifView">
@@ -21,127 +31,104 @@
         <attr name="gifViewStyle" format="reference" />
     </declare-styleable>
 
-    <declare-styleable name="PtrFrameLayout">
-        <attr name="slide_damping" format="float"/>
-    </declare-styleable>
-
     <declare-styleable name="TimeFlagIndicator">
-        <attr name="update_time_flag" format="string"/>
-    </declare-styleable>
-
-    <declare-styleable name="ClassicIndicator">
-        <attr name="classic_indicator_progress_drawable" format="reference"/>
-        <attr name="classic_indicator_progress_rotation_duration" format="integer"/>
-        <attr name="classic_indicator_progress_rotation_direction" format="enum">
-            <enum name="clockwise" value="0"/>
-            <enum name="anti_clockwise" value="1"/>
-        </attr>
-    </declare-styleable>
-
-    <declare-styleable name="ClassicProIndicator">
-        <attr name="classic_pro_indicator_progress_drawable" format="reference"/>
-        <attr name="classic_pro_rotation_duration" format="integer"/>
-        <attr name="is_progress_rotation_when_drag" format="boolean"/>
-        <attr name="classic_pro_indicator_progress_rotation_direction" format="enum">
-            <enum name="clockwise" value="0"/>
-            <enum name="anti_clockwise" value="1"/>
-        </attr>
+        <attr name="update_time_flag" format="string" />
     </declare-styleable>
 
     <declare-styleable name="NestingRecyclerView">
         <attr name="nesting_recycler_view_touch_intercept_mode" format="enum">
-            <enum name="use_supper_default" value="-1"/>
-            <enum name="all_by_myself" value="0"/>
-            <enum name="all_by_myself_but_threshold" value="1"/>
-            <enum name="horizontal" value="2"/>
-            <enum name="horizontal_but_threshold" value="3"/>
-            <enum name="vertical" value="4"/>
-            <enum name="vertical__but_threshold" value="5"/>
+            <enum name="use_supper_default" value="-1" />
+            <enum name="all_by_myself" value="0" />
+            <enum name="all_by_myself_but_threshold" value="1" />
+            <enum name="horizontal" value="2" />
+            <enum name="horizontal_but_threshold" value="3" />
+            <enum name="vertical" value="4" />
+            <enum name="vertical__but_threshold" value="5" />
         </attr>
     </declare-styleable>
 
     <declare-styleable name="NestingViewPager">
         <attr name="nesting_view_pager_touch_intercept_mode" format="enum">
-            <enum name="use_supper_default" value="-1"/>
-            <enum name="all_by_myself" value="0"/>
-            <enum name="all_by_myself_but_threshold" value="1"/>
-            <enum name="horizontal" value="2"/>
-            <enum name="horizontal_but_threshold" value="3"/>
-            <enum name="vertical" value="4"/>
-            <enum name="vertical__but_threshold" value="5"/>
+            <enum name="use_supper_default" value="-1" />
+            <enum name="all_by_myself" value="0" />
+            <enum name="all_by_myself_but_threshold" value="1" />
+            <enum name="horizontal" value="2" />
+            <enum name="horizontal_but_threshold" value="3" />
+            <enum name="vertical" value="4" />
+            <enum name="vertical__but_threshold" value="5" />
         </attr>
     </declare-styleable>
 
     <declare-styleable name="NestingScrollView">
         <attr name="nesting_scroll_view_touch_intercept_mode" format="enum">
-            <enum name="use_supper_default" value="-1"/>
-            <enum name="all_by_myself" value="0"/>
-            <enum name="all_by_myself_but_threshold" value="1"/>
-            <enum name="horizontal" value="2"/>
-            <enum name="horizontal_but_threshold" value="3"/>
-            <enum name="vertical" value="4"/>
-            <enum name="vertical__but_threshold" value="5"/>
+            <enum name="use_supper_default" value="-1" />
+            <enum name="all_by_myself" value="0" />
+            <enum name="all_by_myself_but_threshold" value="1" />
+            <enum name="horizontal" value="2" />
+            <enum name="horizontal_but_threshold" value="3" />
+            <enum name="vertical" value="4" />
+            <enum name="vertical__but_threshold" value="5" />
         </attr>
     </declare-styleable>
 
     <declare-styleable name="NestingHorizontalScrollView">
         <attr name="nesting_horizontal_scroll_view_touch_intercept_mode" format="enum">
-            <enum name="use_supper_default" value="-1"/>
-            <enum name="all_by_myself" value="0"/>
-            <enum name="all_by_myself_but_threshold" value="1"/>
-            <enum name="horizontal" value="2"/>
-            <enum name="horizontal_but_threshold" value="3"/>
-            <enum name="vertical" value="4"/>
-            <enum name="vertical__but_threshold" value="5"/>
+            <enum name="use_supper_default" value="-1" />
+            <enum name="all_by_myself" value="0" />
+            <enum name="all_by_myself_but_threshold" value="1" />
+            <enum name="horizontal" value="2" />
+            <enum name="horizontal_but_threshold" value="3" />
+            <enum name="vertical" value="4" />
+            <enum name="vertical__but_threshold" value="5" />
         </attr>
     </declare-styleable>
 
-    <declare-styleable name="LoadingPager" >
-        <attr name="loadingDrawable" format="reference"/>
-        <attr name="loadingText" format="string"/>
-        <attr name="unknownDrawable" format="reference"/>
-        <attr name="unknownText" format="string"/>
-        <attr name="loadEmptyDrawable" format="reference"/>
-        <attr name="loadEmptyText" format="string"/>
-        <attr name="netUnAvailableDrawable" format="reference"/>
-        <attr name="netUnAvailableText" format="string"/>
-        <attr name="netTimeoutDrawable" format="reference"/>
-        <attr name="netTimeoutText" format="string"/>
-        <attr name="textSize" format="dimension"/>
-        <attr name="textColor" format="color"/>
-        <attr name="isLoadingWithRotateAnimation" format="boolean"/>
+    <declare-styleable name="LoadingPager">
+        <attr name="loadingDrawable" format="reference" />
+        <attr name="loadingText" format="string" />
+        <attr name="unknownDrawable" format="reference" />
+        <attr name="unknownText" format="string" />
+        <attr name="loadEmptyDrawable" format="reference" />
+        <attr name="loadEmptyText" format="string" />
+        <attr name="netUnAvailableDrawable" format="reference" />
+        <attr name="netUnAvailableText" format="string" />
+        <attr name="netTimeoutDrawable" format="reference" />
+        <attr name="netTimeoutText" format="string" />
+        <attr name="textSize" format="dimension" />
+        <attr name="textColor" format="color" />
+        <attr name="isLoadingWithRotateAnimation" format="boolean" />
     </declare-styleable>
 
     <declare-styleable name="LimitEditText">
-        <attr name="isLimitInputCount" format="boolean"/>
-        <attr name="limitCount" format="integer"/>
-        <attr name="isShowTotalInputCount" format="boolean"/>
-        <attr name="isToastIfOverRangingLimitCount" format="boolean"/>
-        <attr name="toastText" format="string"/>
-        <attr name="totalInputCountTextColor" format="color"/>
+        <attr name="isLimitInputCount" format="boolean" />
+        <attr name="limitCount" format="integer" />
+        <attr name="isShowTotalInputCount" format="boolean" />
+        <attr name="isToastIfOverRangingLimitCount" format="boolean" />
+        <attr name="toastText" format="string" />
+        <attr name="totalInputCountTextColor" format="color" />
     </declare-styleable>
 
     <declare-styleable name="ExtraButtonEditText">
-        <attr name="isShowLeftButton" format="boolean"/>
-        <attr name="isShowRightButton" format="boolean"/>
-        <attr name="leftButtonDrawableRes" format="reference"/>
-        <attr name="rightButtonDrawableRes" format="reference"/>
-        <attr name="isAutoClearTextWhenClickRightButton" format="boolean"/>
-        <attr name="isAutoClearTextWhenClickLeftButton" format="boolean"/>
+        <attr name="isShowLeftButton" format="boolean" />
+        <attr name="isShowRightButton" format="boolean" />
+        <attr name="leftButtonDrawableRes" format="reference" />
+        <attr name="rightButtonDrawableRes" format="reference" />
+        <attr name="isAutoClearTextWhenClickRightButton" format="boolean" />
+        <attr name="isAutoClearTextWhenClickLeftButton" format="boolean" />
     </declare-styleable>
 
     <declare-styleable name="PasswordEditText">
-        <attr name="passwordVisibilityDrawable" format="reference"/>
-        <attr name="passwordVisibilityChecked" format="boolean"/>
+        <attr name="passwordVisibilityDrawable" format="reference" />
+        <attr name="passwordVisibilityChecked" format="boolean" />
     </declare-styleable>
 
     <declare-styleable name="LoginEditText">
-        <attr name="isShowClearButton" format="boolean"/>
-        <attr name="isShowDisplayPwdButton" format="boolean"/>
-        <attr name="isShowLeftIcon" format="boolean"/>
-        <attr name="clearButtonDrawable" format="reference"/>
-        <attr name="displayPwdButtonDrawable" format="reference"/>
-        <attr name="leftIcon" format="reference"/>
+        <attr name="isShowClearButton" format="boolean" />
+        <attr name="isShowDisplayPwdButton" format="boolean" />
+        <attr name="isShowLeftIcon" format="boolean" />
+        <attr name="clearButtonDrawable" format="reference" />
+        <attr name="displayPwdButtonDrawable" format="reference" />
+        <attr name="leftIcon" format="reference" />
     </declare-styleable>
 
     <declare-styleable name="CircleImageView">
@@ -152,13 +139,13 @@
     </declare-styleable>
 
     <declare-styleable name="TimeFlagTextView">
-        <attr name="flagName" format="string"/>
-        <attr name="flagDrawable" format="reference"/>
+        <attr name="flagName" format="string" />
+        <attr name="flagDrawable" format="reference" />
         <attr name="flagLocation" format="enum">
-            <enum name="left_top_corner" value="0"/>
-            <enum name="left_bottom_corner" value="1"/>
-            <enum name="right_top" value="2"/>
-            <enum name="right_bottom" value="3"/>
+            <enum name="left_top_corner" value="0" />
+            <enum name="left_bottom_corner" value="1" />
+            <enum name="right_top" value="2" />
+            <enum name="right_bottom" value="3" />
         </attr>
     </declare-styleable>
 
