--- a/CommonLibProject/CommonUtilsDemo/src/main/res/layout/activity_ptr_with_classic_pro_indicator.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/res/layout/activity_ptr_with_classic_pro_indicator.xml
@@ -27,13 +27,16 @@
             app:progress_rotation_direction="clockwise"
             app:progress_rotation_duration="750"
             app:is_progress_rotation_when_drag="true"
-            app:update_time_flag="@string/with_list_view" />
+            app:update_time_flag="@string/with_view" />
 
-        <ListView
+        <TextView
             android:id="@id/ptr_with_view_content"
-            layout="@layout/item_grid"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="@string/ptr_with_classic_pro_indicator"
+            android:textColor="@color/Black"
+            android:textSize="18sp" />
 
         <ImageView
             android:id="@id/ptr_with_view_ad"
