--- a/CommonLibProject/CommonUtils/src/main/res/layout/indicator_classic.xml
+++ b/CommonLibProject/CommonUtils/src/main/res/layout/indicator_classic.xml
@@ -19,7 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/pulling"
-            android:textColor="@color/text_color_black"
+            android:textColor="@color/text_color_gray"
             android:textSize="14sp" />
 
         <TextView
@@ -28,7 +28,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:text="@string/last_refresh_time"
-            android:textColor="@color/text_color_black"
+            android:textColor="@color/text_color_gray"
             android:textSize="12sp" />
 
     </LinearLayout>
