--- a/CommonLibProject/CommonUtils/src/main/res/layout/indicator_classic_pro.xml
+++ b/CommonLibProject/CommonUtils/src/main/res/layout/indicator_classic_pro.xml
@@ -20,7 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/pulling"
-            android:textColor="@color/text_color_black"
+            android:textColor="@color/text_color_gray"
             android:textSize="14sp" />
 
         <TextView
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:text="@string/last_refresh_time"
-            android:textColor="@color/text_color_black"
+            android:textColor="@color/text_color_gray"
             android:textSize="12sp" />
 
     </LinearLayout>
