--- a/CommonLibProject/CommonUtils/src/main/res/layout/indicator_gif_with_title.xml
+++ b/CommonLibProject/CommonUtils/src/main/res/layout/indicator_gif_with_title.xml
@@ -19,7 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/jd_make_your_shopping_faster"
-            android:textColor="@color/text_color_black"
+            android:textColor="@color/text_color_gray"
             android:textSize="14sp" />
 
         <TextView
