--- a/CommonLibProject/CommonUtils/src/main/res/values/colors.xml
+++ b/CommonLibProject/CommonUtils/src/main/res/values/colors.xml
@@ -16,14 +16,16 @@
 
     <!-- 常用字体颜色 -->
     <color name="text_color_black">#212121</color>
+    <color name="text_color_light_black">#767676</color>
     <color name="text_color_gray">#757575</color>
     <color name="text_color_white">#FFFFFF</color>
 
     <!-- 常用分割线颜色 -->
     <color name="divider_color_gray">#BDBDBD</color>
 
-    <!-- 常用分割线颜色 -->
     <color name="background_black">#000000</color>
+
+    <color name="light_gray">#F1F1F1</color>
 
     <!-- ↓Material Design↓ 颜色 -->
     <!-- 红 -->
