--- a/CommonLibProject/CommonUtilsDemo/src/main/res/layout/activity_ptr_with_classic_indicator.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/res/layout/activity_ptr_with_classic_indicator.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/White"
+    android:background="@color/light_gray"
     android:orientation="vertical">
 
     <com.github.evan.common_utils.ui.view.ptr.PtrLayout
@@ -32,6 +32,7 @@
             android:id="@id/ptr_with_view_content"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@color/White"
             android:gravity="center"
             android:text="@string/ptr_with_classic_indicator"
             android:textColor="@color/Black"
@@ -39,9 +40,10 @@
 
         <ImageView
             android:id="@id/ptr_with_view_ad"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/ad" />
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:src="@mipmap/adidas" />
 
 
     </com.github.evan.common_utils.ui.view.ptr.PtrLayout>
