--- a/CommonLibProject/CommonUtilsDemo/src/main/res/layout/item_nest_horizontal_scroll.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/res/layout/item_nest_horizontal_scroll.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    app:nesting_horizontal_scroll_view_handle_parallel_Slide="false"
     app:nesting_horizontal_scroll_view_touch_intercept_mode="horizontal_but_threshold">
 
     <LinearLayout
